# Gitom

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  gitom.service
.github/workflows/: release.yml
assets/: style.css
migrations/: 001_init.sql
src/: config.rs  error.rs  main.rs  rate_limiter.rs  templates.rs
src/auth/: jwt.rs  mod.rs  password.rs
src/db/: git.rs  mod.rs  models.rs  queries.rs
src/middleware/: auth.rs
src/routes/: home.rs  mod.rs  repo.rs  user.rs
src/webhook/: deliver.rs  metrics.rs  mod.rs
templates/: base.html  explore.html  home.html
templates/repo/: _nav.html  blob.html  branches.html  commit.html  commits.html  home.html  settings.html  tags.html  tree.html  webhooks.html
templates/user/: login.html  new_repo.html  profile.html  settings.html
