[package]
name        = "gitom"
version     = "1.0.0"
edition     = "2021"
license     = "MIT"
description = "自部署 · 无社交 · 纯 Git · 单二进制 · 单用户"

[[bin]]
name = "gitom"
path = "src/main.rs"

[dependencies]
tokio              = { version = "1", features = [
    "rt-multi-thread", "net", "io-util", "time",
    "sync", "signal", "process", "macros"
] }
axum               = { version = "0.7", features = ["json", "macros"] }
# reqwest is used only for webhook delivery (no OAuth2)
reqwest            = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
minijinja          = { version = "2", default-features = false, features = ["loader", "builtins"] }
sqlx               = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config             = { version = "0.14", default-features = false, features = ["toml", "env"] }
argon2             = "0.5"
hmac               = "0.12"
sha2               = "0.10"
base64             = "0.22"
jsonwebtoken       = "9"
time               = { version = "0.3", features = ["serde", "formatting", "parsing"] }
anyhow             = "1"
thiserror          = "1"
regex              = { version = "1", default-features = false, features = ["std"] }
git2               = { version = "0.19", default-features = false, features = ["vendored"] }
bytes              = "1"
tower-http         = { version = "0.5", features = ["compression-gzip"] }
rust-embed         = "8"
mime_guess         = { version = "2", default-features = false }
url                = "2"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = true
panic         = "abort"
